--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <li>Note, not finished yet</li>
     <li><a href="/NASPA.m3u" download>Download playlist</a> and open in your favorite music player</li>
     <li>Contact administrator to request songs or playlists</li>
+    <li>Test</li>
   </ul>
   <li>Spotify-like internet music (cherrymusic)</li>
   <ul>
