--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <ul>
   <li>Nonstop Amazing Super Playlist of Awesome</li>
   <ul>
+    <li>Test</li>
     <li><a href="/radio.html">Computer browser link</a></li>
     <li><a href="/music.html">Mobile browser link</a></li>
     <li>Note, not finished yet</li>
