--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <li>Client installation:</li>
     <ul>
       <li><a href="https://community.openvpn.net/openvpn/wiki/Easy_Windows_Guide">Windows</a></li>
-      <li><a href="https://openvpn.net/index.php/access-server/docs/admin-guides/183-how-to-connect-to-access-server-from-a-mac.html">Windows</a></li>
+      <li><a href="https://openvpn.net/index.php/access-server/docs/admin-guides/183-how-to-connect-to-access-server-from-a-mac.html">Mac</a></li>
       <li><a href="https://wiki.archlinux.org/index.php/OpenVPN">Arch linux</a></li>
     </ul>
   </ul>
