Stream when connected

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <ul>
   <li>Nonstop Amazing Super Playlist of Awesome</li>
   <ul>
-    <li><a href="/radio.html">Computer browser link</a></li>
-    <li><a href="/music.html">Mobile browser link</a></li>
+    <li><a href="/radio.html">Computer browser link</a> (Note: not finished yet)</li>
+    <li><a href="/radio.html">Mobile browser link</a></li>
     <li>Note, not finished yet</li>
     <li><a href="/NASPA.m3u" download>Download playlist</a> and open in your favorite music player</li>
     <li>Contact administrator to request songs or playlists</li>
