Added game link

--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 <body>
 <h1>Website coming soon in browsers near you!</h1>
 <br>
-<h3>Other services provided:</h3>
+<h3>Check these things out:</h3>
 <ul>
+  <li>The Game!</li>
+  <ul>
+    <li><a href="https://github.com/HarkerGameDev/TheGame/raw/master/install/GameInstaller.msi" download>Windows installer download</a> (with start menu and desktop shortcuts)</li>
+    <li>Download and run installer daily for the newest builds</li>
+    <li>Please contact administrator to give recommendations</li>
+  </ul>
   <li>Nonstop Amazing Super Playlist of Awesome</li>
   <ul>
     <li><a href="/radio.html">Computer browser link</a> (Note: not finished yet)</li>
     <li><a href="/radio.html">Mobile browser link</a></li>
-    <li>Note, not finished yet</li>
     <li><a href="/NASPA.m3u" download>Download playlist</a> and open in your favorite music player</li>
     <li>Contact administrator to request songs or playlists</li>
   </ul>
