--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
     <li>Contact administrator for account</li>
     <li>Feel free to make and share playlists</li>
   </ul>
+  <li>Plex Media Server (movies)</li>
+  <ul>
+    <li><a href="http://hypertrousers.ddns.net:32400/web/index.html">Plex</a></li>
+    <li>Make a Plex account and contact administrator with your username for access</li>
+    <li>Alternatively, DLNA can be used if connected via a VPN</li>
+  </ul>
   <li>OpenVPN</li>
   <ul>
     <li>Contact administrator for keys</li>
