--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <ul>
   <li>The Game!</li>
   <ul>
-    <li><a href="https://github.com/HarkerGameDev/TheGame/raw/master/install/GameInstaller.msi" download>Windows installer download</a> (with start menu and desktop shortcuts)</li>
+    <li><a href="https://github.com/HarkerGameDev/TheGame/raw/master/install/GameInstaller.msi" download>Windows installer download</a> (NOTE: latest update does not work -- please repair after install)</li>
     <li><a href="https://github.com/HarkerGameDev/TheGame/raw/master/install/Relo.dmg" download>Mac installer download</a> (drag app to Applications folder to install)</li>
     <li>Download and run installer daily for the newest builds</li>
     <li>Please contact administrator to give recommendations</li>
