--- a/index.html
+++ b/index.html
@@ -24,16 +24,28 @@
     <li>Download and run installer daily for the newest builds</li>
     <li>Please contact administrator to give recommendations</li>
   </ul>
+  <li>Flash stuff</li>
+  <ul>
+    <li><a href="flash">Folder right here</a></li>
+    <li>Note: these were made many years ago</li>
+    <li>In chronological order</li>
+    <ol>
+      <li><a href="flash/Shooting_Game.swf">Shooting_Game</a> (game)</li>
+      <li><a href="flash/Complete_Masterpiece.swf">Complete_Masterpiece</a> (animation)</li>
+      <li><a href="flash/Awesome_Swords.swf">Awesome_Swords</a> (animation)</li>
+      <li><a href="flash/Guns.swf">Guns</a> (game) -- personal favorite</li>
+    </ol>
+  </ul>
   <li>Nonstop Amazing Super Playlist of Awesome</li>
   <ul>
-    <li><a href="/radio.html">Computer browser link</a> (Note: not finished yet)</li>
-    <li><a href="/radio.html">Mobile browser link</a></li>
-    <li><a href="/NASPA.m3u" download>Download playlist</a> and open in your favorite music player</li>
+    <li><a href="radio.html">Computer browser link</a> (Note: not finished yet)</li>
+    <li><a href="radio.html">Mobile browser link</a></li>
+    <li><a href="NASPA.m3u" download>Download playlist</a> and open in your favorite music player</li>
     <li>Contact administrator to request songs or playlists</li>
   </ul>
   <li>Spotify-like internet music (cherrymusic)</li>
   <ul>
-    <li><a href="#" onclick="javascript:window.location.port=8080">Link here</a></li>
+    <li><a href="http://hypertrousers.ddns.net:8080">Link here</a></li>
     <li>Use SMB to upload files to Temp folder</li>
     <li>Contact administrator for account</li>
     <li>Feel free to make and share playlists</li>
