Updated to hypertrousers.com

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
   </script>
 </head>
 <body>
-<h1>Website coming soon in browsers near you!</h1>
+<h1>Game Development Blog coming soon in browsers near you!</h1>
 <br>
-<h3>Check these things out:</h3>
+<h3>Meanwhile, check these things out:</h3>
 <ul>
   <li>The Game!</li>
   <ul>
-    <li><a href="https://github.com/HarkerGameDev/TheGame/raw/master/install/GameInstaller.msi" download>Windows installer download</a> (NOTE: latest update does not work -- please repair after install)</li>
-    <li><a href="https://github.com/HarkerGameDev/TheGame/raw/master/install/Relo.dmg" download>Mac installer download</a> (drag app to Applications folder to install)</li>
-    <li>Download and run installer daily for the newest builds</li>
-    <li>Please contact administrator to give recommendations</li>
+    <li><a href="https://github.com/HarkerGameDev/TheGame/raw/master/install/GameInstaller.msi" download>Windows installer download</a></li>
+    <li><a href="https://github.com/HarkerGameDev/TheGame/raw/master/install/Relo.dmg" download>Mac installer download</a></li>
+    <li>Download and run installer often for the newest builds</li>
+    <li>Please <a href="contact.html">contact administrator</a> to give recommendations</li>
   </ul>
   <li>Flash stuff</li>
   <ul>
@@ -40,25 +40,25 @@
   <ul>
     <li><a href="radio.html">Computer browser link</a> (Note: not finished yet)</li>
     <li><a href="radio.html">Mobile browser link</a></li>
-    <li><a href="NASPA.m3u" download>Download playlist</a> and open in your favorite music player</li>
-    <li>Contact administrator to request songs or playlists</li>
+    <li><a href="NASPA.m3u" download>Download playlist</a> and open in your favorite music player (if it supports streams)</li>
+    <li><a href="contact.html">Contact administrator</a> to request songs or playlists</li>
   </ul>
   <li>Spotify-like internet music (cherrymusic)</li>
   <ul>
-    <li><a href="http://hypertrousers.ddns.net:8080">Link here</a></li>
-    <li>Use SMB to upload files to Temp folder</li>
-    <li>Contact administrator for account</li>
+    <li><a href="http://hypertrousers.com:8080">Link here</a></li>
+    <li>Use SMB to upload files to Temp folder in 'music' share</li>
+    <li><a href="contact.html">Contact administrator</a> for account</li>
     <li>Feel free to make and share playlists</li>
   </ul>
   <li>Plex Media Server (movies)</li>
   <ul>
-    <li><a href="http://hypertrousers.ddns.net:32400/web/index.html">Plex</a></li>
-    <li>Make a Plex account and contact administrator with your username for access</li>
+    <li>Find it <a href="http://hypertrousers.com:32400/web/index.html">here</a></li>
+    <li>Make a Plex account and <a href="contact.html">contact administrator</a> with your username for access</li>
     <li>Alternatively, DLNA can be used if connected via a VPN</li>
   </ul>
   <li>OpenVPN</li>
   <ul>
-    <li>Contact administrator for keys</li>
+    <li><a href="contact.html">Contact administrator</a> for keys</li>
     <li>Client installation:</li>
     <ul>
       <li><a href="https://community.openvpn.net/openvpn/wiki/Easy_Windows_Guide">Windows</a></li>
@@ -69,12 +69,12 @@
   <li>SMB (network storage)</li>
   <ul>
     <li>Prerequisite: OpenVPN</li>
-    <li>Contact administrator for account</li>
+    <li><a href="contact.html">Contact administrator</a> for account</li>
     <li>Personal folder can be created</li>
   </ul>
   <li>Minecraft</li>
   <ul>
-    <li>Server at <kbd>hypertrousers.ddns.net</kbd></li>
+    <li>Server at <kbd>hypertrousers.com</kbd></li>
     <li>Have fun :)</li>
 </ul>
 </body>
