Updated radio to hypertrousers.com

--- a/radio.html
+++ b/radio.html
@@ -38,6 +38,6 @@
  </head>
  <body>
   <div id="nowplaying"></div>
-  <audio src="http://hypertrousers.ddns.net:8000" autoplay controls></audio>
+  <audio src="http://hypertrousers.com:8000" autoplay controls></audio>
  </body>
 </html>
