Use hostname resolution for ports

--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
   </ul>
   <li>Spotify-like internet music (cherrymusic)</li>
   <ul>
-    <li><a href="http://hypertrousers.com:8080">Link here</a></li>
+    <li><a href="http://cherry.hypertrousers.com">Link here</a></li>
     <li>Use SMB to upload files to Temp folder in 'music' share</li>
     <li><a href="contact.html">Contact administrator</a> for account</li>
     <li>Feel free to make and share playlists</li>
   </ul>
   <li>Plex Media Server (movies)</li>
   <ul>
-    <li>Find it <a href="http://hypertrousers.com:32400/web/index.html">here</a></li>
+    <li>Find it <a href="http://plex.hypertrousers.com/web/index.html">here</a></li>
     <li>Make a Plex account and <a href="contact.html">contact administrator</a> with your username for access</li>
     <li>Alternatively, DLNA can be used if connected via a VPN</li>
   </ul>
