--- a/index.html
+++ b/index.html
@@ -13,69 +13,10 @@
   </script>
 </head>
 <body>
-<h1>Game Development Blog coming soon in browsers near you!</h1>
+<h1>Check out the <a href="http://blog.hypertrousers.com/">Game Development Blog!</a></h1>
+<h3>Or... go look for some <a href="stuff.html">other cool stuff</a> hosted on the site!</h3>
 <br>
-<h3>Meanwhile, check these things out:</h3>
-<ul>
-  <li>The Game!</li>
-  <ul>
-    <li><a href="https://github.com/HarkerGameDev/TheGame/raw/master/install/GameInstaller.msi" download>Windows installer download</a></li>
-    <li><a href="https://github.com/HarkerGameDev/TheGame/raw/master/install/Relo.dmg" download>Mac installer download</a></li>
-    <li>Download and run installer often for the newest builds</li>
-    <li>Please <a href="contact.html">contact administrator</a> to give recommendations</li>
-  </ul>
-  <li>Flash stuff</li>
-  <ul>
-    <li><a href="flash">Folder right here</a></li>
-    <li>Note: these were made many years ago</li>
-    <li>In chronological order</li>
-    <ol>
-      <li><a href="flash/Shooting_Game.swf">Shooting_Game</a> (game)</li>
-      <li><a href="flash/Complete_Masterpiece.swf">Complete_Masterpiece</a> (animation)</li>
-      <li><a href="flash/Awesome_Swords.swf">Awesome_Swords</a> (animation)</li>
-      <li><a href="flash/Guns.swf">Guns</a> (game) -- personal favorite</li>
-    </ol>
-  </ul>
-  <li>Nonstop Amazing Super Playlist of Awesome</li>
-  <ul>
-    <li><a href="radio.html">Computer browser link</a> (Note: not finished yet)</li>
-    <li><a href="radio.html">Mobile browser link</a></li>
-    <li><a href="NASPA.m3u" download>Download playlist</a> and open in your favorite music player (if it supports streams)</li>
-    <li><a href="contact.html">Contact administrator</a> to request songs or playlists</li>
-  </ul>
-  <li>Spotify-like internet music (cherrymusic)</li>
-  <ul>
-    <li><a href="http://cherry.hypertrousers.com">Link here</a></li>
-    <li>Use SMB to upload files to Temp folder in 'music' share</li>
-    <li><a href="contact.html">Contact administrator</a> for account</li>
-    <li>Feel free to make and share playlists</li>
-  </ul>
-  <li>Plex Media Server (movies)</li>
-  <ul>
-    <li>Find it <a href="http://plex.hypertrousers.com/web/index.html">here</a></li>
-    <li>Make a Plex account and <a href="contact.html">contact administrator</a> with your username for access</li>
-    <li>Alternatively, DLNA can be used if connected via a VPN</li>
-  </ul>
-  <li>OpenVPN</li>
-  <ul>
-    <li><a href="contact.html">Contact administrator</a> for keys</li>
-    <li>Client installation:</li>
-    <ul>
-      <li><a href="https://community.openvpn.net/openvpn/wiki/Easy_Windows_Guide">Windows</a></li>
-      <li><a href="https://openvpn.net/index.php/access-server/docs/admin-guides/183-how-to-connect-to-access-server-from-a-mac.html">Mac</a></li>
-      <li><a href="https://wiki.archlinux.org/index.php/OpenVPN">Arch linux</a></li>
-    </ul>
-  </ul>
-  <li>SMB (network storage)</li>
-  <ul>
-    <li>Prerequisite: OpenVPN</li>
-    <li><a href="contact.html">Contact administrator</a> for account</li>
-    <li>Personal folder can be created</li>
-  </ul>
-  <li>Minecraft</li>
-  <ul>
-    <li>Server at <kbd>hypertrousers.com</kbd></li>
-    <li>Have fun :)</li>
-</ul>
+<br>
+<b>An actual page here will come soon...</b>
 </body>
 </html>
