--- a/contact.html
+++ b/contact.html
@@ -1,17 +1,19 @@
-<head>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-70477783-1', 'auto');
-    ga('send', 'pageview');
-
-  </script>
-</head>
-<body>
-  <p>
-    Email <a href="mailto:admin@hypertrousers.com?Subject=HyperTrousers%20Contact" target="_top">admin@hypertrousers.com</a> for your request
-  </p>
-</body>
+<!-- Do not change the code! -->
+<a id="foxyform_embed_link_764732" href="http://www.foxyform.com/">foxyform</a>
+<script type="text/javascript">
+(function(d, t){
+   var g = d.createElement(t),
+       s = d.getElementsByTagName(t)[0];
+   g.src = "http://www.foxyform.com/js.php?id=764732&sec_hash=ccb12e62bfd&width=350px";
+   s.parentNode.insertBefore(g, s);
+}(document, "script"));
+</script>
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+ga('create', 'UA-70477783-1', 'auto');
+ga('send', 'pageview');
+</script>
+<!-- Do not change the code! -->
