Updated game download links

--- a/stuff.html
+++ b/stuff.html
@@ -21,8 +21,8 @@
   <li>The Game!</li>
   <ul>
     <li>These versions are probably horribly out of date</li>
-    <li><a href="https://github.com/HarkerGameDev/TheGame/raw/master/install/GameInstaller.msi" download>Windows installer download</a></li>
-    <li><a href="https://github.com/HarkerGameDev/TheGame/raw/master/install/Relo.dmg" download>Mac installer download</a></li>
+    <li><a href="https://github.com/HarkerGameDev/TheGame/raw/master/install/Release.zip" download>Windows download</a></li>
+    <li><a href="https://github.com/HarkerGameDev/TheGame/raw/master/install/Relo.dmg" download>Mac download</a></li>
     <li>Please <a href="contact.html">contact administrator</a> to give recommendations</li>
   </ul>
   <li>Flash stuff</li>
