Beginning of redesign

--- a/stuff.html
+++ b/stuff.html
@@ -1,82 +1,64 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+
 <head>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-70477783-1', 'auto');
-    ga('send', 'pageview');
-
-  </script>
+    <title>HyperTrousers</title>
+    <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href='http://fonts.googleapis.com/css?family=Lustria|Niconne' rel='stylesheet'>
+    <link rel="stylesheet" type="text/css" href="css/stuff.css">
+    <script type="text/javascript">// <![CDATA][
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','http://www.google-analytics.com/analytics.js','ga');
+		ga('create', 'UA-70477783-1', 'auto');
+		ga('send', 'pageview');
+	// ]]></script>
 </head>
+
 <body>
-<h2><a href="index.html">Main page</a></h2>
-<h2><a href="http://blog.hypertrousers.com/">Blog</a></h2>
-<br>
-<h3>Check these things out:</h3>
-<ul>
-  <li>The Game!</li>
-  <ul>
-    <li>These versions are probably horribly out of date</li>
-    <li><a href="https://github.com/HarkerGameDev/TheGame/raw/master/install/Release.zip" download>Windows download</a></li>
-    <li><a href="https://github.com/HarkerGameDev/TheGame/raw/master/install/Relo.dmg" download>Mac download</a></li>
-    <li>Please <a href="contact.html">contact administrator</a> to give recommendations</li>
-  </ul>
-  <li>Flash stuff</li>
-  <ul>
-    <li><a href="flash">Folder right here</a></li>
-    <li>Note: these were made many years ago</li>
-    <li>In chronological order</li>
-    <ol>
-      <li><a href="flash/Shooting_Game.swf">Shooting_Game</a> (game)</li>
-      <li><a href="flash/Complete_Masterpiece.swf">Complete_Masterpiece</a> (animation)</li>
-      <li><a href="flash/Awesome_Swords.swf">Awesome_Swords</a> (animation)</li>
-      <li><a href="flash/Guns.swf">Guns</a> (game) -- personal favorite</li>
-    </ol>
-  </ul>
-  <li>Nonstop Amazing Super Playlist of Awesome</li>
-  <ul>
-    <li><a href="radio.html">Computer browser link</a> (Note: not finished yet)</li>
-    <li><a href="radio.html">Mobile browser link</a></li>
-    <li><a href="NASPA.m3u" download>Download playlist</a> and open in your favorite music player (if it supports streams)</li>
-    <li><a href="contact.html">Contact administrator</a> to request songs or playlists</li>
-  </ul>
-  <li>Spotify-like internet music (cherrymusic)</li>
-  <ul>
-    <li><a href="http://cherry.hypertrousers.com">Link here</a></li>
-    <li>Use SMB to upload files to Temp folder in 'music' share</li>
-    <li><a href="contact.html">Contact administrator</a> for account</li>
-    <li>Feel free to make and share playlists</li>
-  </ul>
-  <li>Plex Media Server (movies)</li>
-  <ul>
-    <li>Find it <a href="http://plex.hypertrousers.com/web/index.html">here</a></li>
-    <li>Make a Plex account and <a href="contact.html">contact administrator</a> with your username for access</li>
-    <li>Alternatively, DLNA can be used if connected via a VPN</li>
-  </ul>
-  <li>OpenVPN</li>
-  <ul>
-    <li><a href="contact.html">Contact administrator</a> for keys</li>
-    <li>Client installation:</li>
-    <ul>
-      <li><a href="https://community.openvpn.net/openvpn/wiki/Easy_Windows_Guide">Windows</a></li>
-      <li><a href="https://openvpn.net/index.php/access-server/docs/admin-guides/183-how-to-connect-to-access-server-from-a-mac.html">Mac</a></li>
-      <li><a href="https://wiki.archlinux.org/index.php/OpenVPN">Arch linux</a></li>
-    </ul>
-  </ul>
-  <li>SMB (network storage)</li>
-  <ul>
-    <li>Prerequisite: OpenVPN</li>
-    <li><a href="contact.html">Contact administrator</a> for account</li>
-    <li>Personal folder can be created</li>
-  </ul>
-  <li>Minecraft</li>
-  <ul>
-    <li>Server at <kbd>hypertrousers.com</kbd></li>
-    <li>Have fun :)</li>
-</ul>
+	<h1>HyperTrousers</h1>
+    <hr width="80%">
+    <hr width="95%">
+    <hr width="60%">
+    <hr width="80%">
+    <hr width="40%">
+    <hr width="60%">
+    <hr width="30%">
+    <hr width="40%">
+   	<h2><a href="http://blog.hypertrousers.com">Blog</a></h2>
+	<a href="http://plex.hypertrousers.com/web/index.html" class="split">
+		<img src="images/screenshots/plex.png" />
+	</a>
+	<a href="http://hypertrousers.com/radio.html" class="split">
+		<img src="images/screenshots/radio.png" />
+	</a>
+	<a href="https://hypertrousers.com/roundcube" class="split">
+		<img src="images/screenshots/mail.png" />
+	</a>
+	<a href="https://chat.hypertrousers.com" class="split">
+		<img src="images/screenshots/chat.png" />
+	</a>
+	<a href="http://cherry.hypertrousers.com" class="split">
+		<img src="images/screenshots/cherry.png" />
+	</a>
+	<a href="http://hypertrousers.com/flash/Complete_Masterpiece.swf" class="split">
+		<img src="images/screenshots/note.png" />
+	</a>
+	<a href="http://hypertrousers.com/flash/Guns.swf" class="split">
+		<img src="images/screenshots/guns.png" />
+	</a>
+	<a href="http://hypertrousers.com/flash/Awesome_Swords.swf" class="split">
+		<img src="images/screenshots/animation2.png" />
+	</a>
+	<a href="http://hypertrousers.com/flash/Complete_Masterpiece.swf" class="split">
+		<img src="images/screenshots/animation1.png" />
+	</a>
+	<a href="http://hypertrousers.com/flash/Shooting_Game.swf" class="split">
+		<img src="images/screenshots/shooting.png" />
+	</a>
 </body>
+
 </html>
