--- a/index.html
+++ b/index.html
@@ -1,176 +1,45 @@
-<!doctype html>
-<!--
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
-AUTHOR
-http://templatebaker.com/
-
-LICENSE
-http://templatebaker.com/license/
-
-SUPPORT
-info@templatebaker.com
-
--->
-<html>
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>HyperTrousers Game Development</title>
-<link href='http://fonts.googleapis.com/css?family=Lustria|Niconne|McLaren' rel='stylesheet' type='text/css'>
-<link href="css/styles.css" rel="stylesheet" type="text/css">
-<link rel='stylesheet' id='camera-css'  href='css/camera.css' type='text/css' media='all'> 
-<script type='text/javascript' src='scripts/jquery.min.js'></script>
-<script type='text/javascript' src='scripts/jquery.mobile.customized.min.js'></script>
-<script type='text/javascript' src='scripts/jquery.easing.1.3.js'></script> 
-<script type='text/javascript' src='scripts/camera.min.js'></script> 
-<script>
-	jQuery(function(){
-		
-		jQuery('#camera_wrap_1').camera({
-			thumbnails: true
-		});
-	});
-</script>
-<script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-70477783-1', 'auto');
-    ga('send', 'pageview');
-</script>
+    <title>HyperTrousers</title>
+    <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href='http://fonts.googleapis.com/css?family=Lustria|Niconne' rel='stylesheet'>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script type="text/javascript">// <![CDATA][
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','http://www.google-analytics.com/analytics.js','ga');
+		ga('create', 'UA-70477783-1', 'auto');
+		ga('send', 'pageview');
+	// ]]></script>
 </head>
+
 <body>
-<header class="wrapperContainer">
-	<div class="wrapper">
-        <div>
-            <div class="logo">
-                <h1><a href="">Hyper<br><span>Trousers</span></a></h1>
-                <div class="logoTriangle"></div>
-            </div>
-            <nav>
-                <ul>
-                    <li class="active"><a href="">Home</a></li>
-                    <li><a href="http://blog.hypertrousers.com">Blog</a></li>
-                    <li><a href="radio.html">Radio</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="stuff.html">Stuff</a></li>
-                </ul>
-            </nav>
-            <div class="clearfloat"></div>
-        </div>
-        <div class="clearfloat"></div>
+    <div>
+        <h1>HyperTrousers</h1>
+        <h3>Currently Down</h3>
     </div>
-</header>
-<div class="wrapperContainer">
-	<div class="wrapper">
-        <!--begin Welcome-->
-        <div class="welcome">
-            <!--begin slider-->
-            <div class="mySlider">
-                <div class="camera_wrap camera_green_skin" id="camera_wrap_1">
-                    <div data-thumb="images/slides/thumbs/1.jpg" data-src="images/slides/1.jpg">
-                        <div class="camera_caption fadeFromBottom">Wed 1 <em>Wed description</em></div>
-                    </div>
-                    <div data-thumb="images/slides/thumbs/2.jpg" data-src="images/slides/2.jpg">
-                        <div class="camera_caption fadeFromBottom">Wed 2 <em>Wed description</em></div>
-                    </div>
-                    <div data-thumb="images/slides/thumbs/3.jpg" data-src="images/slides/3.jpg">
-                        <div class="camera_caption fadeFromBottom">Wed 3 <em>Wed description</em></div>
-                    </div>
-                    <div data-thumb="images/slides/thumbs/4.jpg" data-src="images/slides/4.jpg">
-                        <div class="camera_caption fadeFromBottom">Wed 4 <em>Wed description</em></div>
-                    </div>
-                    <div data-thumb="images/slides/thumbs/5.jpg" data-src="images/slides/5.jpg">
-                        <div class="camera_caption fadeFromBottom">Wed 5 <em>Wed description</em></div>
-                    </div>
-                </div>
-            </div>
-            <!--end slider-->
-            <div class="description">
-                <h2>Welcome</h2>
-                <p>
-                    Game Development information goes here.
-                </p>
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                </p>
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                </p>
-                <p class="button">
-                    <a href="">Details...</a>
-                </p>
-            </div>
-            <div class="clearfloat"></div>
+    <hr width="80%">
+    <hr width="95%">
+    <hr width="60%">
+    <hr width="80%">
+    <hr width="40%">
+    <hr width="60%">
+    <hr width="30%">
+    <hr width="40%">
+    <div>
+        <div class="left">
+            <img src="images/face.png" />
         </div>
-        <!--end Welcome-->
-	</div>
-</div>
-<div class="wrapper">
-    <!--begin Boxex -->
-    <div class="boxex">
-        <div class="box">
-            <h2>Titl1 1</h2>
-            <img src="images/pic1.jpg" alt="pic1"> 
-            <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer 
-            </p>
+        <div class="right">
+            <p>Performing redesign of site</p>
+            <p>For list of services, go <br> <a href="stuff.html">HERE</a></p>
         </div>
-        <div class="box">
-            <h2>Titl1 2</h2>
-            <img src="images/pic2.jpg" alt="pic2"> 
-            <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer 
-            </p>
-        </div>
-        <div class="box lastBox">
-            <h2>Titl1 3</h2>
-            <img src="images/pic3.jpg" alt="pic3"> 
-            <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer 
-            </p>
-        </div>
-        <div class="clearfloat"></div>
     </div>
-    <!--end Boxex-->
-    <!--begin Sidebar -->
-    <div class="sidebar">
-    	<div class="sBox">
-            <h2>Sidebar</h2>
-            <ul>
-                <li><a href="">Lorem Ipsum is simply </a></li>
-                <li><a href="">Dummy text of the</a></li>
-                <li><a href="">Printing and typesetting</a></li>
-                <li><a href="">Industry lorem Ipsum</a></li>
-                <li><a href="">Has been the industry's</a></li>
-                <li><a href="">Standard dummy text</a></li>
-                <li><a href="">Ever since the 1500s</a></li>
-                <li><a href="">When an unknown</a></li>
-                <li><a href="">Printer took a galley</a></li>
-            </ul>
-        </div>	
-    </div>
-    <!--end Sidebar-->
-    <div class="clearfloat"></div>
-</div>
-<div class="clearfloat"></div>
-<div class="wrapperContainer">
-    <footer>
-        <p>
-            Copyright &copy; <a href="#">HyperTrousers</a> | Designed by <a href="http://www.templatebaker.com" rel="nofollow" title="Free Responsive Templates">Free Responsive Templates</a>
-        </p>
-        <div class="icons">
-            <ul>
-                <li><a href=""><img src="images/facebook.png" alt="facebook icon"></a></li>
-                <li><a href=""><img src="images/twitter.png" alt="twitter icon"></a></li>
-                <li><a href=""><img src="images/googleplus.png" alt="google plus icon"></a></li>
-                <li><a href=""><img src="images/dribbble.png" alt="dribble icon"></a></li>
-            </ul> 
-        </div>
-        <div class="clearfloat"></div>
-    </footer>
-</div>
 </body>
+
 </html>
