Fixed Android link

--- a/stuff.html
+++ b/stuff.html
@@ -44,7 +44,7 @@
 	<a href="http://cherry.hypertrousers.com" class="split">
 		<img src="images/screenshots/cherry.png" />
 	</a>
-	<a href="http://hypertrousers.com/flash/Complete_Masterpiece.swf" class="split">
+	<a href="https://play.google.com/store/apps/details?id=com.nikitakosolobov.android.notetaker" class="split">
 		<img src="images/screenshots/note.png" />
 	</a>
 	<a href="http://hypertrousers.com/flash/Guns.swf" class="split">
