--- a/stuff.html
+++ b/stuff.html
@@ -30,33 +30,43 @@
     <hr width="40%">
    	<h2><a href="http://blog.hypertrousers.com">Blog</a></h2>
 	<a href="http://plex.hypertrousers.com/web/index.html" class="split">
+		Plex media server
 		<img src="images/screenshots/plex.png" />
 	</a>
 	<a href="http://hypertrousers.com/radio.html" class="split">
+		Radio station
 		<img src="images/screenshots/radio.png" />
 	</a>
 	<a href="https://hypertrousers.com/roundcube" class="split">
+		Mail server
 		<img src="images/screenshots/mail.png" />
 	</a>
 	<a href="https://chat.hypertrousers.com" class="split">
+		E2E encrypted chat
 		<img src="images/screenshots/chat.png" />
 	</a>
 	<a href="http://cherry.hypertrousers.com" class="split">
+		Music collection
 		<img src="images/screenshots/cherry.png" />
 	</a>
 	<a href="https://play.google.com/store/apps/details?id=com.nikitakosolobov.android.notetaker" class="split">
+		Android note app
 		<img src="images/screenshots/note.png" />
 	</a>
 	<a href="http://hypertrousers.com/flash/Guns.swf" class="split">
+		Guns game
 		<img src="images/screenshots/guns.png" />
 	</a>
 	<a href="http://hypertrousers.com/flash/Awesome_Swords.swf" class="split">
+		Fighting animation
 		<img src="images/screenshots/animation2.png" />
 	</a>
 	<a href="http://hypertrousers.com/flash/Complete_Masterpiece.swf" class="split">
+		Flash animation
 		<img src="images/screenshots/animation1.png" />
 	</a>
 	<a href="http://hypertrousers.com/flash/Shooting_Game.swf" class="split">
+		Shooting game
 		<img src="images/screenshots/shooting.png" />
 	</a>
 </body>
