Work in progress

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <div>
         <h1>HyperTrousers</h1>
-        <h3>Currently Down</h3>
+        <h3>Work in progress</h3>
     </div>
     <hr width="80%">
     <hr width="95%">
